--- a/src/style.css
+++ b/src/style.css
@@ -19,6 +19,7 @@ a {
   color: #646cff;
   text-decoration: inherit;
 }
+
 a:hover {
   color: #535bf2;
 }
@@ -43,13 +44,14 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: #8083bc;
 }
+
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
@@ -82,7 +84,7 @@ code {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+    background-color: #859cda;
   }
   code {
     background-color: #f9f9f9;
